Build menu wrapping fix

--- a/app/less/header.less
+++ b/app/less/header.less
@@ -110,6 +110,7 @@ header {
   }
 
   ul {
+    display: inline-block;
     white-space: nowrap;
     margin: 0 0 0.5em;
     padding: 0;
